<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main -->
    <string name="app_name">CrowdPlay</string>
    <!-- Drawer -->
    <string name="drawer_title">CrowdPlay</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- Rooms -->
    <string name="room_overview_title">Rooms</string>
    <string name="room_overview_action_add">Create room</string>
    <string name="room_overview_action_refresh">Refresh</string>
    <string name="room_overview_action_refresh_message">Searching for rooms</string>
    <string name="room_overview_action_refresh_noresults">No rooms found</string>
    <string name="room_overview_dialog_title">Create room</string>
    <string name="room_overview_dialog_field">name</string>
    <string name="room_overview_dialog_cancel">Cancel</string>
    <string name="room_overview_dialog_ok">Create</string>
    <string name="room_overview_dialog_field_empty">Please enter a name</string>
    <string name="room_overview_emptystate_text">No rooms found. Rooms will be automatically discovered.</string>
    <string name="room_overview_emptystate_button">Host room</string>
    <!-- Host -->
    <string name="room_play_title">Play</string>
    <string name="room_play_action_broadcast">Broadcast room</string>
    <string name="room_play_action_edit">Edit room</string>
    <string name="room_play_action_add">Add track</string>
    <string name="room_play_action_disconnect">Disconnect</string>
    <string name="room_play_dialog_title">Edit room</string>
    <string name="room_play_dialog_field">name</string>
    <string name="room_play_dialog_cancel">Cancel</string>
    <string name="room_play_dialog_ok">Save</string>
    <string name="room_play_dialog_succes">Room name changed</string>
    <string name="room_play_dialog_field_empty">Please enter a name</string>
    <string name="room_play_emptystate_title">Playlist is empty</string>
    <string name="room_play_emptystate_text">Add a local track or ask collaborators to add their tracks</string>
    <!-- Playlist -->
    <string name="room_playlist_title">Playlist</string>
    <string name="room_playlist_emptystate_title">Playlist is empty</string>
    <string name="room_playlist_emptystate_text">To add a track, press the icon in the menu</string>
    <!-- Music -->
    <string name="music_overview_title">Music</string>
    <string name="music_overview_search">Search</string>
    <string name="music_overview_context_selection">selected</string>
    <string name="music_overview_context_add">Add</string>
    <string name="music_overview_context_host">Host</string>
    <string name="music_overview_context_add_selection">Added %d tracks</string>
    <string name="music_overview_emptystate_title">No music found</string>
    <string name="music_overview_emptystate_text">Please add music to your device</string>
    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_version">Version 0.1.7 (Alpha build)</string>
    <string name="about_copyright">©2014 crowdplay.nl</string>
    <string name="about_feedback">Send feedback</string>
    <string name="about_feedback_text">Tell us what you think</string>
    <string name="about_report">Report a problem</string>
    <string name="about_report_text">Let us know about a bug or problem</string>
    <string name="about_app">Crowdplay allows you to quicly create high quality collaborative playlists. Optimized for Android.</string>
    <string name="about_terms">Terms of Services</string>
    <string name="about_privacy">Privacy Policy</string>

</resources>
