<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jvrhenen.crowdplay.app.RoomsOverviewActivity"
    android:background="@color/appBackground">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/room_play_track_art"
                android:background="#DDD"
                android:src="@drawable/art"
                android:scaleType="centerCrop" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="64dp"
                android:layout_gravity="bottom"
                android:background="@drawable/art_gradient">

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Artist - Track title"
                android:id="@+id/textView"
                android:gravity="center"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/Player.Track" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal|top"
                android:background="@drawable/actionbar_gradient"
                android:id="@+id/frameLayout2" />

        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/frameLayout"
            android:id="@+id/linearLayout"
            android:background="#FFF"
            android:layout_gravity="bottom"
            android:gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton"
                android:background="@drawable/ic_action_previous" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton2"
                android:background="@drawable/ic_action_play"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:background="@drawable/ic_action_next" />
        </LinearLayout>

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_weight="1"
            android:layout_marginTop="186dp"
            android:layout_marginLeft="-16dp"
            android:layout_marginRight="-16dp" />

    </FrameLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/room_play_action_add"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/card_bg"
        android:textAppearance="@style/Player.AddTrack"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:onClick="addDemoTrack"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frameLayout" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/button">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_play_emptystate_title"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textAppearance="@style/Player.EmptyState.Title" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_play_emptystate_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="@style/Player.EmptyState.Text"
            android:layout_marginRight="55dp"
            android:layout_marginLeft="55dp" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:background="@color/appBackground"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
