<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.crowdplay.app.RoomOverviewFragment"
    android:background="@color/appBackground">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/room_play_track_art"
                android:background="#DDD"
                android:src="@drawable/art"
                android:scaleType="centerCrop" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="64dp"
                android:layout_gravity="bottom"
                android:background="@drawable/art_gradient">

            </FrameLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/currentTitle"
                android:gravity="center"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/Player.Track"
                android:singleLine="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal|top"
                android:background="@drawable/actionbar_gradient"
                android:id="@+id/frameLayout2" />

        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="#FFF"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:weightSum="1">

            <TextView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="0:00"
                android:id="@+id/currentTime"
                android:gravity="center"
                android:layout_weight="0.50"
                android:textAppearance="@style/Player.Duration" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/playButton"
                    android:src="@drawable/ic_action_play"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="playMusic" />

            </LinearLayout>

            <TextView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/totalTime"
                android:gravity="center"
                android:layout_weight="0.50"
                android:textAppearance="@style/Player.Duration"
                android:text="0:00" />

        </LinearLayout>

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_weight="1"
            android:layout_marginTop="186dp"
            android:layout_marginLeft="-16dp"
            android:layout_marginRight="-16dp" />

    </FrameLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/room_play_action_add"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/card_bg"
        android:textAppearance="@style/Player.AddTrack"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:onClick="addMusic"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frameLayout" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/button">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_play_emptystate_title"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textAppearance="@style/EmptyState.Title" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_play_emptystate_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="@style/EmptyState.Text"
            android:layout_marginRight="55dp"
            android:layout_marginLeft="55dp" />
    </LinearLayout>

    <de.timroes.android.listview.EnhancedListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:background="@color/appBackground"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
